[metadata]
name = wpexptract
version = 0.1
author = Michael Gloessl
author_email = mgloessl04@gmail.com
description = small script to import WP posts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichaelGloessl04/WP_API_Extractor/py
license = MIT

[options]
packages = find:
install_requires =
    beautifulsoup4
    requests
